@@ -3,6 +3,10 @@
 	* modules/readline/configure.in: test for all functions and
 	variables interfaced to
 	* modules/readline/test.tst: new file
+	* modules/readline/readline.lisp: include config.h
+	(*foreign-guard*) [compilation]: set to T
+	(add-defun): fixed "name" argument allocation
+	(readline-name): fixed :ALLOC
 
 2005-10-05  Sam Steingold  <sds@gnu.org>
 
